Layout bug fixes (#127)

--- a/frontend/app/components/uikit/tag/tag.scss
+++ b/frontend/app/components/uikit/tag/tag.scss
@@ -33,6 +33,6 @@
 
   /* Type */
   &--transparent{
-    @apply bg-transparent px-0;
+    @apply bg-transparent text-neutral-500 px-0;
   }
 }
